jswt-parser/src/snapshots/jswt_parser__expression__test__parse_nested_arguments_expression.snap
---
source: jswt-parser/src/expression.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_nested_arguments_expression",
                    module: "module/test_parse_nested_arguments_expression",
                    start: 0,
                    end: 26,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_nested_arguments_expression",
                        module: "module/test_parse_nested_arguments_expression",
                        start: 0,
                        end: 26,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_parse_nested_arguments_expression",
                                    module: "module/test_parse_nested_arguments_expression",
                                    start: 0,
                                    end: 26,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_parse_nested_arguments_expression",
                                        module: "module/test_parse_nested_arguments_expression",
                                        start: 9,
                                        end: 13,
                                    },
                                    value: "test",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_parse_nested_arguments_expression",
                                        module: "module/test_parse_nested_arguments_expression",
                                        start: 13,
                                        end: 15,
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_parse_nested_arguments_expression",
                                        module: "module/test_parse_nested_arguments_expression",
                                        start: 16,
                                        end: 26,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Expression(
                                                ExpressionStatement {
                                                    span: Span {
                                                        file: "test_parse_nested_arguments_expression",
                                                        module: "module/test_parse_nested_arguments_expression",
                                                        start: 18,
                                                        end: 24,
                                                    },
                                                    expression: Arguments(
                                                        ArgumentsExpression {
                                                            span: Span {
                                                                file: "test_parse_nested_arguments_expression",
                                                                module: "module/test_parse_nested_arguments_expression",
                                                                start: 18,
                                                                end: 23,
                                                            },
                                                            ident: Arguments(
                                                                ArgumentsExpression {
                                                                    span: Span {
                                                                        file: "test_parse_nested_arguments_expression",
                                                                        module: "module/test_parse_nested_arguments_expression",
                                                                        start: 18,
                                                                        end: 21,
                                                                    },
                                                                    ident: Identifier(
                                                                        IdentifierExpression {
                                                                            span: Span {
                                                                                file: "test_parse_nested_arguments_expression",
                                                                                module: "module/test_parse_nested_arguments_expression",
                                                                                start: 18,
                                                                                end: 19,
                                                                            },
                                                                            ident: Identifier {
                                                                                span: Span {
                                                                                    file: "test_parse_nested_arguments_expression",
                                                                                    module: "module/test_parse_nested_arguments_expression",
                                                                                    start: 18,
                                                                                    end: 19,
                                                                                },
                                                                                value: "a",
                                                                            },
                                                                        },
                                                                    ),
                                                                    arguments: ArgumentsList {
                                                                        span: Span {
                                                                            file: "test_parse_nested_arguments_expression",
                                                                            module: "module/test_parse_nested_arguments_expression",
                                                                            start: 19,
                                                                            end: 21,
                                                                        },
                                                                        arguments: [],
                                                                    },
                                                                },
                                                            ),
                                                            arguments: ArgumentsList {
                                                                span: Span {
                                                                    file: "test_parse_nested_arguments_expression",
                                                                    module: "module/test_parse_nested_arguments_expression",
                                                                    start: 21,
                                                                    end: 23,
                                                                },
                                                                arguments: [],
                                                            },
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
